syntax = "proto3";
package a;
import "google/protobuf/duration.proto";

message Test {
  string field1 = 1;
  google.protobuf.Duration field2 = 2;
}
